--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
       "allowJs": true,                       /* Allow javascript files to be compiled. */
       "checkJs": true,                       /* Report errors in .js files. */
       "noEmit": true,                        /* Do not emit outputs. */
-      "lib": ["es2017"],
+      "lib": ["es2017","DOM"],
   
       /* Strict Type-Checking Options */
       "strict": true,                           /* Enable all strict type-checking options. */
