--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
   "main": "index.js",
   "scripts": {
     "build": "rollup -c ./rollup.config.ts --configPlugin typescript",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "jardenliu",
   "license": "MIT",
   "devDependencies": {
     "@rollup/plugin-typescript": "^9.0.2",
+    "@types/jest": "^29.2.3",
+    "@types/node": "^18.11.9",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "rollup": "^3.5.0",
+    "ts-node": "^10.9.1",
     "tslib": "^2.4.1",
     "typescript": "^4.9.3"
   }
