--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/node": "^18.11.9",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
+    "jest-environment-node": "^29.3.1",
+    "puppeteer": "1.12.2",
     "rollup": "^3.5.0",
     "ts-node": "^10.9.1",
     "tslib": "^2.4.1",
