--- a/example/webpack/package.json
+++ b/example/webpack/package.json
@@ -27,7 +27,8 @@
     "typescript": "^4.9.3",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.0",
-    "webpack-dev-server": "^4.11.1"
+    "webpack-dev-server": "^4.11.1",
+    "wujie-react": "^1.0.1"
   },
   "dependencies": {
     "react": "^18.2.0",
