--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
   "devDependencies": {
     "@jardenliu/eslint-config": "^1.0.0",
     "@rollup/plugin-typescript": "^9.0.2",
+    "@types/expect-puppeteer": "^5.0.2",
     "@types/jest": "^29.2.3",
+    "@types/jest-environment-puppeteer": "^5.0.3",
     "@types/node": "^18.11.9",
+    "@types/puppeteer": "^7.0.4",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "jest-environment-node": "^29.3.1",
+    "jest-puppeteer": "^6.1.1",
     "puppeteer": "1.12.2",
     "rollup": "^3.5.0",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "tslib": "^2.4.1",
     "typescript": "^4.9.3"
