--- a/examples/webpack/package.json
+++ b/examples/webpack/package.json
@@ -28,7 +28,8 @@
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.0",
     "webpack-dev-server": "^4.11.1",
-    "wujie-react": "^1.0.1"
+    "wujie-react": "^1.0.1",
+    "wujie-polyfill": "workspace:^1.0.0"
   },
   "dependencies": {
     "react": "^18.2.0",
