feat:😎 init LocationSyncPlugin

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,21 +1,26 @@
 {
-    "name": "wujie-polyfill",
-    "version": "1.0.0",
-    "description": "极致的微前端框架的polyfill",
-    "main": "dist/index.js",
-    "scripts": {
-      "dev": "rollup -c ./rollup.config.ts --configPlugin typescript --watch",
-      "build": "rollup -c ./rollup.config.ts --configPlugin typescript"
-    },
-    "keywords": [],
-    "author": "jardenliu",
-    "license": "MIT",
-    "devDependencies": {
-      "@rollup/plugin-typescript": "^9.0.2",
-      "@types/node": "^18.11.9",
-      "rollup": "^3.5.0",
-      "tslib": "^2.4.1",
-      "typescript": "^4.9.3"
-    }
+  "name": "wujie-polyfill",
+  "version": "1.0.0",
+  "description": "极致的微前端框架的polyfill",
+  "main": "dist/index.js",
+  "module": "dist/index.es.js",
+  "types": "dist/index.d.ts",
+  "scripts": {
+    "dev": "rollup -c ./rollup.config.ts --configPlugin typescript --watch",
+    "build": "rollup -c ./rollup.config.ts --configPlugin typescript"
+  },
+  "keywords": [],
+  "author": "jardenliu",
+  "license": "MIT",
+  "devDependencies": {
+    "@types/node": "^18.11.9",
+    "esbuild": "^0.16.4",
+    "rollup": "^3.5.0",
+    "rollup-plugin-cleaner": "^1.0.0",
+    "rollup-plugin-dts": "^5.0.0",
+    "rollup-plugin-esbuild": "^5.0.0",
+    "tslib": "^2.4.1",
+    "typescript": "^4.9.3",
+    "wujie": "^1.0.3"
   }
-  
+}
