--- a/package.json
+++ b/package.json
@@ -5,18 +5,23 @@
   "main": "index.js",
   "scripts": {
     "dev": "pnpm --parallel --filter wujie-polyfill  --filter *wujie-example dev --open",
-    "test": "jest"
+    "test": "jest",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "jardenliu",
   "license": "MIT",
   "devDependencies": {
+    "@commitlint/cli": "^17.3.0",
+    "@commitlint/config-conventional": "^17.3.0",
     "@jardenliu/eslint-config": "^1.0.0",
     "@rollup/plugin-typescript": "^9.0.2",
     "@types/expect-puppeteer": "^5.0.2",
     "@types/jest": "^29.2.3",
     "@types/jest-environment-puppeteer": "^5.0.3",
     "@types/node": "^18.11.9",
+    "chalk": "^5.2.0",
+    "husky": "^8.0.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "jest-environment-node": "^29.3.1",
