--- a/examples/locationSync/package.json
+++ b/examples/locationSync/package.json
@@ -28,12 +28,13 @@
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.0",
     "webpack-dev-server": "^4.11.1",
-    "wujie-react": "^1.0.1",
-    "wujie-polyfill": "workspace:^1.0.0"
+    "wujie-polyfill": "workspace:^1.0.0",
+    "wujie-react": "^1.0.1"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.6.0",
     "stylus": "^0.59.0",
     "stylus-loader": "^7.1.0"
   }
