--- a/package.json
+++ b/package.json
@@ -1,37 +1,40 @@
 {
-  "name": "wujie-polyfill-repos",
-  "version": "1.0.0",
-  "description": "极致的微前端框架的polyfill",
-  "main": "index.js",
-  "scripts": {
-    "dev": "pnpm --parallel --filter wujie-polyfill  --filter *wujie-example dev --open",
-    "build": "pnpm --filter wujie-polyfill build",
-    "test": "jest",
-    "prepare": "husky install"
-  },
-  "keywords": [],
-  "author": "jardenliu",
-  "license": "MIT",
-  "devDependencies": {
-    "@commitlint/cli": "^17.3.0",
-    "@commitlint/config-conventional": "^17.3.0",
-    "@jardenliu/eslint-config": "^1.0.0",
-    "@rollup/plugin-typescript": "^9.0.2",
-    "@types/expect-puppeteer": "^5.0.2",
-    "@types/jest": "^29.2.3",
-    "@types/jest-environment-puppeteer": "^5.0.3",
-    "@types/node": "^18.11.9",
-    "chalk": "^5.2.0",
-    "husky": "^8.0.0",
-    "jest": "^29.3.1",
-    "jest-environment-jsdom": "^29.3.1",
-    "jest-environment-node": "^29.3.1",
-    "jest-puppeteer": "^6.1.1",
-    "puppeteer": "1.12.2",
-    "rollup": "^3.5.0",
-    "ts-jest": "^29.0.3",
-    "ts-node": "^10.9.1",
-    "tslib": "^2.4.1",
-    "typescript": "^4.9.3"
-  }
+    "name": "wujie-polyfill-repos",
+    "version": "1.0.0",
+    "description": "极致的微前端框架的polyfill",
+    "main": "index.js",
+    "scripts": {
+        "dev": "pnpm --parallel --filter wujie-polyfill  --filter *wujie-example dev --open",
+        "build": "pnpm --filter wujie-polyfill build",
+        "test": "jest",
+        "docs:dev": "pnpm --filter wujie-polyfill-docs dev",
+        "docs:build": "pnpm --filter wujie-polyfill-docs build",
+        "docs:preview": "pnpm --filter wujie-polyfill-docs preview",
+        "prepare": "husky install"
+    },
+    "keywords": [],
+    "author": "jardenliu",
+    "license": "MIT",
+    "devDependencies": {
+        "@commitlint/cli": "^17.3.0",
+        "@commitlint/config-conventional": "^17.3.0",
+        "@jardenliu/eslint-config": "^1.0.0",
+        "@rollup/plugin-typescript": "^9.0.2",
+        "@types/expect-puppeteer": "^5.0.2",
+        "@types/jest": "^29.2.3",
+        "@types/jest-environment-puppeteer": "^5.0.3",
+        "@types/node": "^18.11.9",
+        "chalk": "^5.2.0",
+        "husky": "^8.0.0",
+        "jest": "^29.3.1",
+        "jest-environment-jsdom": "^29.3.1",
+        "jest-environment-node": "^29.3.1",
+        "jest-puppeteer": "^6.1.1",
+        "puppeteer": "1.12.2",
+        "rollup": "^3.5.0",
+        "ts-jest": "^29.0.3",
+        "ts-node": "^10.9.1",
+        "tslib": "^2.4.1",
+        "typescript": "^4.9.3"
+    }
 }
