--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,16 @@
 {
     "editor.codeActionsOnSave": {
-        "source.fixAll.eslint": true
+        "source.fixAll.eslint": "explicit"
     },
     "editor.formatOnSave": true,
     "eslint.format.enable": true,
     "eslint.lintTask.enable": true,
     "eslint.enable": true,
     "eslint.workingDirectories": [
-        { "directory": "docs/.vitepress", "changeProcessCWD": true }
+        {
+            "directory": "docs/.vitepress",
+            "changeProcessCWD": true
+        }
     ],
     "[javascript]": {
         "editor.defaultFormatter": "dbaeumer.vscode-eslint"
