--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,7 +2,7 @@
     "name": "wujie-polyfill",
     "version": "1.0.11",
     "description": "极致的微前端框架的polyfill",
-    "main": "dist/index.js",
+    "main": "dist/index.cjs.js",
     "module": "dist/index.es.js",
     "types": "dist/index.d.ts",
     "scripts": {
